--- a/resources/web/userdashboard_overview.html
+++ b/resources/web/userdashboard_overview.html
@@ -191,7 +191,7 @@
               </div>
               <div id ="funds_current" class="col-xs-8 text-right">
                 <script id="funds_current_template" type="x-tmpl-mustache"> 
-                  <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
+                  <p class="announcement-heading">{{.}}</p>
 
                   <p class="announcement-text">Funds</p>
                 </script>
@@ -222,7 +222,7 @@
               </div>
               <div id = "rewards_earned_total_by_user" class="col-xs-8 text-right">
                 <script id="rewards_earned_total_by_user_template" type="x-tmpl-mustache"> 
-                  <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
+                  <p class="announcement-heading">{{.}}</p>
 
                   <p class="announcement-text">Rewards Earned</p>
                 </script>
@@ -253,7 +253,7 @@
               </div>
               <div id="pieces_owned_current" class="col-xs-8 text-right">
                 <script id="pieces_owned_current_template" type="x-tmpl-mustache"> 
-                  <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
+                  <p class="announcement-heading">{{.}}</p>
 
                   <p class="announcement-text">Pieces Value</p>
                 </script>
