--- a/resources/web/userdashboard_overview.html
+++ b/resources/web/userdashboard_overview.html
@@ -92,21 +92,21 @@
 
 
            <ul class="nav navbar-nav navbar-right">
- 
+
 
 
             <li id="userDropdown" class="dropdown user-dropdown">
 
              <script id="usernameTemplate" type="x-tmpl-mustache">  
-               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
+             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
 
 
-               <ul class="dropdown-menu">
-                 <li><a href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
-                 <li class="divider"></li>
-                 <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
+             <ul class="dropdown-menu">
+             <li><a href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
+             <li class="divider"></li>
+             <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
-               </ul>
+             </ul>
              </script>
            </li>
          </ul>
@@ -191,9 +191,9 @@
               </div>
               <div id ="funds_current" class="col-xs-8 text-right">
                 <script id="funds_current_template" type="x-tmpl-mustache"> 
-                  <p class="announcement-heading">{{.}}</p>
+                <p class="announcement-heading">{{.}}</p>
 
-                  <p class="announcement-text">Funds</p>
+                <p class="announcement-text">Funds</p>
                 </script>
               </div>
             </div>
@@ -222,9 +222,9 @@
               </div>
               <div id = "rewards_earned_total_by_user" class="col-xs-8 text-right">
                 <script id="rewards_earned_total_by_user_template" type="x-tmpl-mustache"> 
-                  <p class="announcement-heading">{{.}}</p>
+                <p class="announcement-heading">{{.}}</p>
 
-                  <p class="announcement-text">Rewards Earned</p>
+                <p class="announcement-text">Rewards Earned</p>
                 </script>
               </div>
             </div>
@@ -253,9 +253,9 @@
               </div>
               <div id="pieces_owned_current" class="col-xs-8 text-right">
                 <script id="pieces_owned_current_template" type="x-tmpl-mustache"> 
-                  <p class="announcement-heading">{{.}}</p>
+                <p class="announcement-heading">{{.}}</p>
 
-                  <p class="announcement-text">Pieces Value</p>
+                <p class="announcement-text">Pieces Value</p>
                 </script>
               </div>
             </div>
@@ -285,9 +285,9 @@
               <div id="users_reputation" class="col-xs-8 text-right">
 
                 <script id="users_reputation_template" type="x-tmpl-mustache">
-                  <p class="announcement-heading">{{.}}</p>
+                <p class="announcement-heading">{{.}}</p>
 
-                  <p class="announcement-text">Reputation</p>
+                <p class="announcement-text">Reputation</p>
                 </script> 
               </div>
             </div>
@@ -320,58 +320,60 @@
           </div>
           <div id="recent_activity" class="panel-body">
             <script id="recent_activity_template" type="x-tmpl-mustache"> 
-              <table id="recent_activity_table" class="table table-hover table-striped tablesorter">
-                <thead> 
-                  <tr>
-                    <th>Time <i class="fa fa-sort"></i></th>
-                    <th>Type <i class="fa fa-sort"></th>
-                    <th>Recipient <i class="fa fa-sort"></th>
-                    <th>Funds <i class="fa fa-sort"></th>
-                  </tr>
-                </thead>
+            <table id="recent_activity_table" class="table table-hover table-striped tablesorter">
+            <thead> 
+            <tr>
+            <th>Time <i class="fa fa-sort"></i></th>
+            <th>Type <i class="fa fa-sort"></th>
+            <th>Recipient <i class="fa fa-sort"></th>
+            <th>Pieces <i class="fa fa-sort"></th>
+            <th>Funds <i class="fa fa-sort"></th>
+            </tr>
+            </thead>
 
-                <tbody>
+            <tbody>
 
-                  {{#.}}
+            {{#.}}
 
-                  <tr> 
-                    <td>{{time_}}</td>
-                    <td>{{type}}</td>
-                    <td>{{recipient}}</td>
-                    <td>{{funds}}</td>
-                  </tr>
-                  {{/.}}
+            <tr> 
+            <td>{{time_}}</td>
+            <td>{{type}}</td>
+            <td>{{recipient}}</td>
+            <td>{{pieces}}</td>
+            <td>{{funds}}</td>
+            </tr>
+            {{/.}}
 
-                </tbody>
-              </script>
-            </table>
-
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Current Pieces owned value</h3>
-          </div>
-          <div class="panel-body">
-            <div class = "small-chart" id="pieces_owned_value_current"></div>
-          </div>
-        </div>
-      </div>
-
-
-
-      <!-- a big ass chart -->
-      <div class="row">
-        <div class="col-lg-12">
+            </tbody>
+            </script>
+          </table>
 
         </div>
       </div>
-
     </div>
-    <!-- end of wrapper -->
+    <div class="col-md-6">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Current Pieces owned value</h3>
+        </div>
+        <div class="panel-body">
+          <div class = "small-chart" id="pieces_owned_value_current"></div>
+        </div>
+      </div>
+    </div>
+
+
+
+    <!-- a big ass chart -->
+    <div class="row">
+      <div class="col-lg-12">
+
+      </div>
+    </div>
+
   </div>
+  <!-- end of wrapper -->
+</div>
 </div>
 <!-- Modals -->
 <div id="depositModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
