Lots of fixes made to pages, about halfway done with currency conversion stuff

--- a/resources/web/creator_overview.html
+++ b/resources/web/creator_overview.html
@@ -105,7 +105,7 @@
 
 
              <ul class="dropdown-menu">
-             <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
+             <li><a href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
              <li class="divider"></li>
              <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
@@ -211,7 +211,8 @@
           <th>Time <i class="fa fa-sort"></i></th>
           <th>Type <i class="fa fa-sort"></th>
           <th>Recipient <i class="fa fa-sort"></th>
-          <th>Price <i class="fa fa-sort"></th>
+          <th>Pieces <i class="fa fa-sort"></th>
+          <th>Total <i class="fa fa-sort"></th>
           </tr>
           </thead>
 
@@ -223,6 +224,7 @@
           <td>{{time_}}</td>
           <td>{{type}}</td>
           <td>{{recipient}}</td>
+          <td>{{pieces}}</td>
           <td>{{funds}}</td>
           </tr>
           {{/.}}
