--- a/resources/web/creator_pieces.html
+++ b/resources/web/creator_pieces.html
@@ -105,7 +105,7 @@
 
 
              <ul class="dropdown-menu">
-             <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
+             <li><a href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
              <li class="divider"></li>
              <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
@@ -270,7 +270,7 @@
         <tr> 
         <td>{{users_username}}</td>
         <td>{{pieces_total}}</td>
-        <td>{{value_total}}</td>
+        <td>{{value_total_current}}</td>
         </tr>
         {{/.}}
 
