--- a/resources/web/creator_pricing.html
+++ b/resources/web/creator_pricing.html
@@ -105,7 +105,7 @@
 
 
              <ul class="dropdown-menu">
-             <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
+             <li><a href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
              <li class="divider"></li>
              <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
@@ -230,7 +230,7 @@
         <td>{{time_}}</td>
         <td>{{users_name}}</td>
         <td>{{type}}</td>
-        <td>{{price}}</td>
+        <td>{{total_current}}</td>
         </tr>
         {{/.}}
 
