--- a/resources/web/sb-admin/tables.html
+++ b/resources/web/sb-admin/tables.html
@@ -108,7 +108,7 @@
               <ul class="dropdown-menu">
                 <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
                 <li><a href="#"><i class="fa fa-envelope"></i> Inbox <span class="badge">7</span></a></li>
-                <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
+                <li><a href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
                 <li class="divider"></li>
                 <li><a href="#"><i class="fa fa-power-off"></i> Log Out</a></li>
               </ul>
