--- a/resources/web/userdashboard_prices.html
+++ b/resources/web/userdashboard_prices.html
@@ -102,7 +102,7 @@
 
 
                <ul class="dropdown-menu">
-                 <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
+                 <li><a href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
                  <li class="divider"></li>
                  <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
