depositing in alternate currencies using spot rate

--- a/resources/web/userdashboard_funds.html
+++ b/resources/web/userdashboard_funds.html
@@ -179,7 +179,8 @@
               <th>Time <i class="fa fa-sort"></i></th>
               <th>Type <i class="fa fa-sort"></th>
               <th>Recipient <i class="fa fa-sort"></th>
-              <th>Funds <i class="fa fa-sort"></th>
+              <th>Pieces <i class="fa fa-sort"></th>
+              <th>Total <i class="fa fa-sort"></th>
               </tr>
               </thead>
 
@@ -191,7 +192,8 @@
               <td>{{time_}}</td>
               <td>{{type}}</td>
               <td>{{recipient}}</td>
-              <td>{{funds}}</td>
+              <td>{{pieces}}</td>
+              <td>{{total}}</td>
               </tr>
               {{/.}}
 
