bid placing fixed

--- a/resources/web/userdashboard_overview.html
+++ b/resources/web/userdashboard_overview.html
@@ -327,7 +327,7 @@
                     <th>Type <i class="fa fa-sort"></th>
                     <th>Recipient <i class="fa fa-sort"></th>
                     <th>Pieces <i class="fa fa-sort"></th>
-                    <th>Funds <i class="fa fa-sort"></th>
+                    <th>Total <i class="fa fa-sort"></th>
                   </tr>
                 </thead>
 
@@ -340,7 +340,7 @@
                     <td>{{type}}</td>
                     <td>{{recipient}}</td>
                     <td>{{pieces}}</td>
-                    <td>{{funds}}</td>
+                    <td>{{total}}</td>
                   </tr>
                   {{/.}}
 
