Fixed up bidding and asking unit conversions

--- a/resources/web/creator_overview.html
+++ b/resources/web/creator_overview.html
@@ -278,7 +278,7 @@
             </div>
             <div id ="worth_current" class="col-xs-8 text-right">
               <script id="worth_current_template" type="x-tmpl-mustache"> 
-              <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
+              <p class="announcement-heading">{{.}}</p>
 
               <p class="announcement-text">Worth</p>
               </script>
@@ -310,7 +310,7 @@
             </div>
             <div id="price_per_piece_current" class="col-xs-8 text-right">
               <script id="price_per_piece_current_template" type="x-tmpl-mustache"> 
-              <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
+              <p class="announcement-heading">{{.}}</p>
 
               <p class="announcement-text">Price per piece</p>
               </script>
@@ -342,7 +342,7 @@
             </div>
             <div id="rewards_paid" class="col-xs-8 text-right">
               <script id="rewards_paid_template" type="x-tmpl-mustache"> 
-              <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
+              <p class="announcement-heading">{{.}}</p>
 
               <p class="announcement-text">Rewards Paid</p>
               </script>
