--- a/resources/web/creator_pricing.html
+++ b/resources/web/creator_pricing.html
@@ -101,15 +101,15 @@
             <li id="userDropdown" class="dropdown user-dropdown">
 
              <script id="usernameTemplate" type="x-tmpl-mustache">  
-             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
+               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
 
 
-             <ul class="dropdown-menu">
-             <li><a href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
-             <li class="divider"></li>
-             <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
+               <ul class="dropdown-menu">
+                 <li><a href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
+                 <li class="divider"></li>
+                 <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
-             </ul>
+               </ul>
              </script>
            </li>
          </ul>
@@ -212,35 +212,37 @@
       </div>
       <div id="bids_asks" class="panel-body">
         <script id="bids_asks_template" type="x-tmpl-mustache"> 
-        <table id="bids_asks_table" class="table table-hover table-striped tablesorter">
-        <thead> 
-        <tr>
-        <th>Time <i class="fa fa-sort"></i></th>
-        <th>User <i class="fa fa-sort"></th>
-        <th>Type <i class="fa fa-sort"></th>
-        <th>Price <i class="fa fa-sort"></th>
-        </tr>
-        </thead>
+          <table id="bids_asks_table" class="table table-hover table-striped tablesorter">
+            <thead> 
+              <tr>
+                <th>Time <i class="fa fa-sort"></i></th>
+                <th>User <i class="fa fa-sort"></th>
+                <th>Type <i class="fa fa-sort"></th>
+                <th>Pieces <i class="fa fa-sort"></th>
+                <th>Price per piece<i class="fa fa-sort"></th>
+              </tr>
+            </thead>
 
-        <tbody>
+            <tbody>
 
-        {{#.}}
+              {{#.}}
 
-        <tr> 
-        <td>{{time_}}</td>
-        <td>{{users_name}}</td>
-        <td>{{type}}</td>
-        <td>{{total_current}}</td>
-        </tr>
-        {{/.}}
+              <tr> 
+                <td>{{time_}}</td>
+                <td>{{users_name}}</td>
+                <td>{{type}}</td>
+                <td>{{pieces}}</td>
+                <td>{{price_per_piece}}</td>
+              </tr>
+              {{/.}}
 
-        </tbody>
-        </script>
-      </table>
+            </tbody>
+          </script>
+        </table>
 
+      </div>
     </div>
   </div>
-</div>
 
 
 
