--- a/resources/web/carousel.html
+++ b/resources/web/carousel.html
@@ -68,7 +68,6 @@
       <li><a href="/creators">Creators</a></li>
       <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
       <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
-      <li><a href="#logout" id="logouthref" class="hide">Log Out</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
         <ul class="dropdown-menu">
@@ -134,7 +133,7 @@
 
 
        <ul class="dropdown-menu">
-         <li><a href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
+         <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
          <li class="divider"></li>
          <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
