--- a/resources/web/creator_funds.html
+++ b/resources/web/creator_funds.html
@@ -106,7 +106,7 @@
 
 
                <ul class="dropdown-menu">
-               <li><a href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
+               <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
                <li class="divider"></li>
                <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
