--- a/resources/web/creator_overview.html
+++ b/resources/web/creator_overview.html
@@ -32,15 +32,18 @@
 	<link href="../pickadate/lib/themes/default.css" rel="stylesheet"/>
 	<link href="../pickadate/lib/themes/default.date.css" rel="stylesheet"/>
 
-	<!-- This main css -->
-	<link href="../userdashboard.css" rel="stylesheet">
+  <!-- Summernote -->
+  <link href="summernote/dist/summernote.css" rel="stylesheet"/>
+
+  <!-- This main css -->
+  <link href="../userdashboard.css" rel="stylesheet">
 
 
 
-	<!-- Just for debugging purposes. Don't actually copy this line! -->
-	<!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <!-- Just for debugging purposes. Don't actually copy this line! -->
+  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -101,15 +104,15 @@
             <li id="userDropdown" class="dropdown user-dropdown">
 
              <script id="usernameTemplate" type="x-tmpl-mustache">  
-             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
+               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
 
 
-             <ul class="dropdown-menu">
-             <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
-             <li class="divider"></li>
-             <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
+               <ul class="dropdown-menu">
+                 <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
+                 <li class="divider"></li>
+                 <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
-             </ul>
+               </ul>
              </script>
            </li>
          </ul>
@@ -205,265 +208,270 @@
         </div>
         <div id="creators_activity" class="panel-body">
           <script id="creators_activity_template" type="x-tmpl-mustache"> 
-          <table id="creators_activity_table" class="table table-condensed table-hover table-striped tablesorter">
-          <thead>
-          <tr>
-          <th>Time <i class="fa fa-sort"></i></th>
-          <th>Type <i class="fa fa-sort"></th>
-          <th>Recipient <i class="fa fa-sort"></th>
-          <th>Pieces <i class="fa fa-sort"></th>
-          <th>Total <i class="fa fa-sort"></th>
-          </tr>
-          </thead>
+            <table id="creators_activity_table" class="table table-condensed table-hover table-striped tablesorter">
+              <thead>
+                <tr>
+                  <th>Time <i class="fa fa-sort"></i></th>
+                  <th>Type <i class="fa fa-sort"></th>
+                  <th>Recipient <i class="fa fa-sort"></th>
+                  <th>Pieces <i class="fa fa-sort"></th>
+                  <th>Total <i class="fa fa-sort"></th>
+                </tr>
+              </thead>
 
-          <tbody>
+              <tbody>
 
-          {{#.}}
+                {{#.}}
 
-          <tr> 
-          <td>{{time_}}</td>
-          <td>{{type}}</td>
-          <td>{{recipient}}</td>
-          <td>{{pieces}}</td>
-          <td>{{funds}}</td>
-          </tr>
-          {{/.}}
+                <tr> 
+                  <td>{{time_}}</td>
+                  <td>{{type}}</td>
+                  <td>{{recipient}}</td>
+                  <td>{{pieces}}</td>
+                  <td>{{funds}}</td>
+                </tr>
+                {{/.}}
 
-          </tbody>
-          </script>
-        </table>
+              </tbody>
+            </script>
+          </table>
 
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="col-lg-6">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Price per piece history</h3>
-      </div>
-      <div class="panel-body">
-        <div class = "small-chart" id="pricing"></div>
+    <div class="col-lg-6">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Price per piece history</h3>
+        </div>
+        <div class="panel-body">
+          <div class = "small-chart" id="pricing"></div>
+        </div>
       </div>
     </div>
+
   </div>
-
-</div>
-<div> <hr></div>
+  <div> <hr></div>
 
 
-<!-- The main body -->
-<div class="row">
+  <!-- The main body -->
   <div id="main_body" class="col-md-10">
-    <script id="main_body_template" type="x-tmpl-mustache">
-    <p class="lead">{{.}}</p>
-    </script>
-  </div>
-</div>
-
-</div>
-
-<div class="col-md-2 col-md-offset-10">  
-
-  <!-- <div class="span2 col-md-2 col-md-offset-10">   -->
-  <!-- The boxes on the right this time-->
-
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <div class="row">
-            <div class="col-xs-4">
-              <i class="fa fa-bank fa-5x"></i>
-            </div>
-            <div id ="worth_current" class="col-xs-8 text-right">
-              <script id="worth_current_template" type="x-tmpl-mustache"> 
-              <p class="announcement-heading">{{.}}</p>
-
-              <p class="announcement-text">Worth</p>
-              </script>
-            </div>
-          </div>
-        </div>
-        <a href="creator_worth" rel="keep-params">
-          <div class="panel-footer announcement-bottom">
-            <div class="row">
-              <div class="col-xs-6">
-                View Worth
-              </div>
-              <div class="col-xs-6 text-right">
-                <i class="fa fa-arrow-circle-right"></i>
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="panel panel-success">
-        <div class="panel-heading">
-          <div class="row">
-            <div class="col-xs-4">
-              <i class="fa fa-money fa-5x"></i>
-            </div>
-            <div id="price_per_piece_current" class="col-xs-8 text-right">
-              <script id="price_per_piece_current_template" type="x-tmpl-mustache"> 
-              <p class="announcement-heading">{{.}}</p>
-
-              <p class="announcement-text">Price per piece</p>
-              </script>
-            </div>
-          </div>
-        </div>
-        <a href="creator_pricing" rel="keep-params">
-          <div class="panel-footer announcement-bottom">
-            <div class="row">
-              <div class="col-xs-6">
-                View Pricing
-              </div>
-              <div class="col-xs-6 text-right">
-                <i class="fa fa-arrow-circle-right"></i>
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
     <div class="row">
-    <div class="col-lg-12">
-      <div class="panel panel-warning">
-        <div class="panel-heading">
-          <div class="row">
-            <div class="col-xs-4">
-              <i class="fa fa-cubes fa-5x"></i>
-            </div>
-            <div id="pieces_held_current" class="col-xs-8 text-right">
-              <script id="pieces_held_current_template" type="x-tmpl-mustache"> 
-              <p class="announcement-heading">{{.}}</p>
+      <script id="main_body_template" type="x-tmpl-mustache">
+        <p class="lead">{{.}}</p>
+      </script>
+    </div>
 
-              <p class="announcement-text">Pieces held</p>
-              </script>
-            </div>
-          </div>
-        </div>
-        <a href="creator_pieces" rel="keep-params">
-          <div class="panel-footer announcement-bottom">
-            <div class="row">
-              <div class="col-xs-6">
-                View pieces
-              </div>
-              <div class="col-xs-6 text-right">
-                <i class="fa fa-arrow-circle-right"></i>
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
+    <div class="row">
+      <button id="saveBtn" type="submit" class="btn btn-primary hide">Save</button>
     </div>
   </div>
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="panel panel-success">
-        <div class="panel-heading">
-          <div class="row">
-            <div class="col-xs-4">
-              <i class="fa fa-money fa-5x"></i>
-            </div>
-            <div id="rewards_paid" class="col-xs-8 text-right">
-              <script id="rewards_paid_template" type="x-tmpl-mustache"> 
-              <p class="announcement-heading">{{.}}</p>
 
-              <p class="announcement-text">Rewards Paid</p>
-              </script>
-            </div>
-          </div>
-        </div>
-        <a href="creator_rewards" rel="keep-params">
-          <div class="panel-footer announcement-bottom">
+
+
+
+  <div class="col-md-2 col-md-offset-10">  
+
+    <!-- <div class="span2 col-md-2 col-md-offset-10">   -->
+    <!-- The boxes on the right this time-->
+
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="panel panel-info">
+          <div class="panel-heading">
             <div class="row">
-              <div class="col-xs-6">
-                View Rewards
+              <div class="col-xs-4">
+                <i class="fa fa-bank fa-5x"></i>
               </div>
-              <div class="col-xs-6 text-right">
-                <i class="fa fa-arrow-circle-right"></i>
+              <div id ="worth_current" class="col-xs-8 text-right">
+                <script id="worth_current_template" type="x-tmpl-mustache"> 
+                  <p class="announcement-heading">{{.}}</p>
+
+                  <p class="announcement-text">Worth</p>
+                </script>
               </div>
             </div>
           </div>
-        </a>
+          <a href="creator_worth" rel="keep-params">
+            <div class="panel-footer announcement-bottom">
+              <div class="row">
+                <div class="col-xs-6">
+                  View Worth
+                </div>
+                <div class="col-xs-6 text-right">
+                  <i class="fa fa-arrow-circle-right"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="panel panel-danger">
-        <div class="panel-heading">
-          <div class="row">
-            <div class="col-xs-4">
-              <i class="fa fa-empire fa-5x"></i>
-            </div>
-            <div id="backers_current_count" class="col-xs-8 text-right">
-
-              <script id="backers_current_count_template" type="x-tmpl-mustache">
-              <p class="announcement-heading">{{.}}</p>
-
-              <p class="announcement-text"># of Backers</p>
-              </script> 
-            </div>
-          </div>
-        </div>
-        <a href="creator_pieces" rel="keep-params">
-          <div class="panel-footer announcement-bottom">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="panel panel-success">
+          <div class="panel-heading">
             <div class="row">
-              <div class="col-xs-6">
-                View Backers
+              <div class="col-xs-4">
+                <i class="fa fa-money fa-5x"></i>
               </div>
-              <div class="col-xs-6 text-right">
-                <i class="fa fa-arrow-circle-right"></i>
+              <div id="price_per_piece_current" class="col-xs-8 text-right">
+                <script id="price_per_piece_current_template" type="x-tmpl-mustache"> 
+                  <p class="announcement-heading">{{.}}</p>
+
+                  <p class="announcement-text">Price per piece</p>
+                </script>
               </div>
             </div>
           </div>
-        </a>
+          <a href="creator_pricing" rel="keep-params">
+            <div class="panel-footer announcement-bottom">
+              <div class="row">
+                <div class="col-xs-6">
+                  View Pricing
+                </div>
+                <div class="col-xs-6 text-right">
+                  <i class="fa fa-arrow-circle-right"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="panel">
-        <div class="panel-heading">
-          <div class="row">
-            <div class="col-xs-4">
-              <i class="fa fa-empire fa-5x"></i>
-            </div>
-            <div id="creators_reputation" class="col-xs-8 text-right">
-
-              <script id="creators_reputation_template" type="x-tmpl-mustache">
-              <p class="announcement-heading">{{.}}</p>
-
-              <p class="announcement-text">Reputation</p>
-              </script> 
-            </div>
-          </div>
-        </div>
-        <a href="userdashboard_pieces" rel="keep-params">
-          <div class="panel-footer announcement-bottom">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="panel panel-warning">
+          <div class="panel-heading">
             <div class="row">
-              <div class="col-xs-6">
-                View Backers
+              <div class="col-xs-4">
+                <i class="fa fa-cubes fa-5x"></i>
               </div>
-              <div class="col-xs-6 text-right">
-                <i class="fa fa-arrow-circle-right"></i>
+              <div id="pieces_held_current" class="col-xs-8 text-right">
+                <script id="pieces_held_current_template" type="x-tmpl-mustache"> 
+                  <p class="announcement-heading">{{.}}</p>
+
+                  <p class="announcement-text">Pieces held</p>
+                </script>
               </div>
             </div>
           </div>
-        </a>
+          <a href="creator_pieces" rel="keep-params">
+            <div class="panel-footer announcement-bottom">
+              <div class="row">
+                <div class="col-xs-6">
+                  View pieces
+                </div>
+                <div class="col-xs-6 text-right">
+                  <i class="fa fa-arrow-circle-right"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="panel panel-success">
+          <div class="panel-heading">
+            <div class="row">
+              <div class="col-xs-4">
+                <i class="fa fa-money fa-5x"></i>
+              </div>
+              <div id="rewards_paid" class="col-xs-8 text-right">
+                <script id="rewards_paid_template" type="x-tmpl-mustache"> 
+                  <p class="announcement-heading">{{.}}</p>
+
+                  <p class="announcement-text">Rewards Paid</p>
+                </script>
+              </div>
+            </div>
+          </div>
+          <a href="creator_rewards" rel="keep-params">
+            <div class="panel-footer announcement-bottom">
+              <div class="row">
+                <div class="col-xs-6">
+                  View Rewards
+                </div>
+                <div class="col-xs-6 text-right">
+                  <i class="fa fa-arrow-circle-right"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="panel panel-danger">
+          <div class="panel-heading">
+            <div class="row">
+              <div class="col-xs-4">
+                <i class="fa fa-empire fa-5x"></i>
+              </div>
+              <div id="backers_current_count" class="col-xs-8 text-right">
+
+                <script id="backers_current_count_template" type="x-tmpl-mustache">
+                  <p class="announcement-heading">{{.}}</p>
+
+                  <p class="announcement-text"># of Backers</p>
+                </script> 
+              </div>
+            </div>
+          </div>
+          <a href="creator_pieces" rel="keep-params">
+            <div class="panel-footer announcement-bottom">
+              <div class="row">
+                <div class="col-xs-6">
+                  View Backers
+                </div>
+                <div class="col-xs-6 text-right">
+                  <i class="fa fa-arrow-circle-right"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="panel">
+          <div class="panel-heading">
+            <div class="row">
+              <div class="col-xs-4">
+                <i class="fa fa-empire fa-5x"></i>
+              </div>
+              <div id="creators_reputation" class="col-xs-8 text-right">
+
+                <script id="creators_reputation_template" type="x-tmpl-mustache">
+                  <p class="announcement-heading">{{.}}</p>
+
+                  <p class="announcement-text">Reputation</p>
+                </script> 
+              </div>
+            </div>
+          </div>
+          <a href="userdashboard_pieces" rel="keep-params">
+            <div class="panel-footer announcement-bottom">
+              <div class="row">
+                <div class="col-xs-6">
+                  View Backers
+                </div>
+                <div class="col-xs-6 text-right">
+                  <i class="fa fa-arrow-circle-right"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
 </div>
 
 <!-- Modals -->
@@ -701,11 +709,11 @@
      </div>
 
    </div>
+
  </div>
-</div>
 
 
-<!-- end of wrapper -->
+ <!-- end of wrapper -->
 </div>
 
 
@@ -731,6 +739,7 @@
       <script src="../typeahead.js/typeahead.bundle.js"></script>
       <script src="../pickadate/lib/picker.js"></script>
       <script src="../pickadate/lib/picker.date.js"></script>
+      <script src="summernote/dist/summernote.min.js"></script>
 
       <!-- my scripts -->
       <script src="../tools.js"></script>
