--- a/resources/web/creator_overview.html
+++ b/resources/web/creator_overview.html
@@ -185,6 +185,7 @@
          <button id="bidBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#bidModal">Bid</button>
          <button id="buyBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#buyModal">Buy</button>
          <button id="issueBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#issueModal">Issue Pieces</button>
+         <button id="changeRewardBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#rewardModal">Change Reward</button>
 
        </div>
      </div>
@@ -771,6 +772,40 @@
            </div>
          </div>
          <button id="placeIssuePiecesBtn" type="submit" class="btn btn-primary">Issue Pieces</button>
+
+       </form>
+
+     </div>
+
+   </div>
+ </div>
+</div>
+
+<div id="rewardModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Change Reward</h4>
+      </div>
+      <div class="modal-body">
+      <div class="text">
+      Note, this will essentially cash every piece of yours owned out at the current rate at this moment,
+      then all pieces will start earning rewards at the new rate from now on.
+      </div>
+        <form id="rewardForm" class="form-horizontal" role="form">
+          <div class="form-group form-group-lg">
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Reward Percentage</label>
+            <div class="col-sm-10">
+              <input name="reward_pct" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last reward"
+              data-bv-greaterthan="true"
+              data-bv-greaterthan-value="1"
+              data-bv-greaterthan-message="Must be > 1" 
+
+              >
+            </div>
+          
+         <button id="placeChangeRewardBtn" type="submit" class="btn btn-primary">Change Reward</button>
 
        </form>
 
