picking creators categories done

--- a/resources/web/creators.html
+++ b/resources/web/creators.html
@@ -276,7 +276,7 @@
 
             <script id="categories_template" type="x-tmpl-mustache"> 
 
-              <select multiple id="categorySelect" name="category" class="form-control" role="menu" aria-labelledby="dropdownMenu1"
+              <select multiple id="categorySelect" name="category[]" class="form-control" role="menu" aria-labelledby="dropdownMenu1"
               size=10 style='height: 100%;'>
               {{#.}}
               <option value='{{name}}'>{{name}}</option>
