Got the accordion working right with some js

--- a/resources/web/creators.html
+++ b/resources/web/creators.html
@@ -395,7 +395,7 @@
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <button id="settingsSaveBtn" type="submit" class="btn btn-primary"
-        data-toggle="collapse" data-target="#raiseFunds">Save</button>
+        >Save</button>
       </div>
     </div>
 
