--- a/resources/web/creators.html
+++ b/resources/web/creators.html
@@ -129,7 +129,8 @@
 
           <a class="list-group-item" href="#registerCreator"><i class="fa fa-bar-chart-o"></i> Register</a>
           <a class="list-group-item" href="#categories"><i class="fa fa-table"></i> Categories</a>
-          <a class="list-group-item" href="userdashboard_prices.html"><i class="fa fa-edit"></i> Prices</a>
+          <a class="list-group-item" href="#units"><i class="fa fa-table"></i> Units</a>
+          <a class="list-group-item" href="#raiseFunds"><i class="fa fa-table"></i> Raise Funds</a>
         </div>
       </div>        
     </div>
@@ -474,7 +475,7 @@
        <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <button id="raiseFundsBtn" type="submit" class="btn btn-primary" 
-          data-toggle="collapse" data-target="#units,#raiseFunds">Take me to my page</button>
+          data-toggle="collapse" data-target="">Take me to my page</button>
         </div>
       </div>
 
