javascript void instead of styling

--- a/resources/web/creator_overview_v2.html
+++ b/resources/web/creator_overview_v2.html
@@ -242,8 +242,8 @@
         </div>
         <div class="panel-footer">
           <ul class="pager">
-          <li id="creators_activity_pager_prev" class="disabled"><a style="cursor:pointer;">Previous</a></li>
-            <li id="creators_activity_pager_next" ><a style="cursor:pointer;">Next</a></li>
+          <li id="creators_activity_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
+            <li id="creators_activity_pager_next" ><a href="javascript:void(0);">Next</a></li>
           </ul>
         </div>
 
